add new route get avatar
